# datadog-traceroute

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  ipv6_plan.md  main.go  readme.md  traceroute.go
.claude/: rewrite_in_rust_plan.md  settings.local.json
.claude/commands/: fix-ci.md
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml  rust-test.yml  test.yml
cache/: cache.go  cache2.go  cache_test.go
changelog/: fix_wireguard_netlink_overflow_plan.md
cmd/: params.go  root.go  runner.go  version.go
cmd/traceroute-server/: main.go
common/: common.go  common_ipv6_test.go  common_test.go  localaddr.go  localaddr_helpers.go  localaddr_linux.go  localaddr_linux_test.go  localaddr_other.go  result.go  route_linux.go  route_linux_test.go  route_nonlinux.go  traceroute_parallel.go  traceroute_parallel_test.go  traceroute_serial.go  traceroute_serial_test.go  traceroute_types.go  traceroute_types_test.go  utils.go  utils_test.go
common/localaddr/: helpers.go  linux.go  linux_test.go  other.go
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/icmp/: Cargo.toml
crates/packets/: Cargo.toml
crates/packets/src/: frame_parser.rs  lib.rs  linux.rs  macos.rs
crates/packets/src/windows/: mod.rs
crates/publicip/: Cargo.toml
crates/result/: Cargo.toml
crates/reversedns/: Cargo.toml
crates/sack/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/tcp/: Cargo.toml
crates/testutils/: Cargo.toml
crates/traceroute/: Cargo.toml
crates/traceroute/src/: lib.rs
crates/udp/: Cargo.toml
crates/winconn/: Cargo.toml
docs/: rust-rewrite-architecture.md  rust-rewrite-contract.md  rust-rewrite-core.md  rust-rewrite-todo.md  rust-rewrite-windows-driver.md
dublintraceroute/: dublin-traceroute.go
dublintraceroute/net/: icmp_test.go  ipv4_test.go  ipv6_test.go  udp_test.go
dublintraceroute/netpath_payload/: pathevent.go
dublintraceroute/results/: results.go
dublintraceroute/utils/: utils.go
e2etests/: README.md  cli_test.go  doc.go  e2e_test.go  e2etestutil.go  error_handling_test.go  server_test.go  utils_test.go
fix_wireguard_bug_orig/: tcp_traceroute_icmp_reponses.pcap
icmp/: icmp_driver.go  icmp_driver_test.go  icmp_packet.go  icmp_packet_test.go  parser.go  tcp_parser.go  tcp_parser_test.go  traceroute_icmp.go  traceroute_icmp_linux.go  traceroute_icmp_nolinux.go  udp_parser.go  udp_parser_test.go
icmp/portable_icmp/: portable_icmp.go
icmpecho/: icmp_driver.go  icmp_driver_test.go  icmp_traceroute.go  icmpv4.go  icmpv4_test.go
integration_tests/: QUICK_START.md  README.md  SUMMARY.md  doc.go  error_handling_test.go  library_test.go
localaddr/: helpers.go  localaddr.go  localaddr_test.go  route_linux.go  route_linux_test.go  route_nonlinux.go
log/: log.go  log_test.go
packets/: afpacket_source_linux.go  attach_linux.go  bpfdev_darwin.go  cbpf_filters.go  cbpf_filters_test.go  driver_sink_windows.go  driver_source_windows.go  driver_windows_test.go  frame_parser.go  packet_sink_darwin.go  packet_sink_linux.go  packet_sink_mockgen.go  packet_sink_unix.go  packet_source.go  packet_source_mockgen.go  rawconn_windows.go  read_deadline.go  sourcesink_darwin.go  sourcesink_linux.go  sourcesink_unsupported.go  sourcesink_windows.go  strip_headers.go  strip_headers_test.go  tcp_filter.go  tcp_filter_test.go  tcp_test.go  types.go  windows_filters.go
pinger/: mock.go  pinger.go  utils.go  utils_test.go
publicip/: cache.go  cache2.go  fetcher.go  fetcher_test.go  getip.go  publicip.go  publicip_mockgen.go  settings.go
result/: result.go  result_test.go  utils.go  utils_test.go
reversedns/: reversedns.go  reversedns_test.go
runner/: cache.go  cache2.go  params.go  runner.go  runner_test.go
rust/: Cargo.toml
rust/crates/traceroute-cli/: Cargo.toml
rust/crates/traceroute-cli/src/: main.rs  runner.rs
rust/crates/traceroute-cli/tests/: e2e_test.rs
rust/crates/traceroute-core/: Cargo.toml
rust/crates/traceroute-core/src/: error.rs  lib.rs  result.rs  traits.rs  types.rs
rust/crates/traceroute-core/src/execution/: mod.rs  parallel.rs  serial.rs
rust/crates/traceroute-icmp/: Cargo.toml
rust/crates/traceroute-icmp/src/: driver.rs  lib.rs  packet.rs
rust/crates/traceroute-packets/: Cargo.toml
rust/crates/traceroute-packets/src/: lib.rs  parser.rs  sink.rs  source.rs
rust/crates/traceroute-packets/src/platform/: darwin.rs  linux.rs  mod.rs  windows.rs
rust/crates/traceroute-sack/: Cargo.toml
rust/crates/traceroute-sack/src/: driver.rs  lib.rs  packet.rs
rust/crates/traceroute-server/: Cargo.toml
rust/crates/traceroute-server/src/: handlers.rs  lib.rs  main.rs  runner.rs
rust/crates/traceroute-tcp/: Cargo.toml
rust/crates/traceroute-tcp/src/: driver.rs  lib.rs  packet.rs
rust/crates/traceroute-udp/: Cargo.toml
rust/crates/traceroute-udp/src/: driver.rs  lib.rs  packet.rs
rust/tests/: e2e_test.rs
sack/: sack_driver.go  sack_driver_linux.go  sack_packet.go  sack_packet_linux.go  traceroute_sack.go  traceroute_sack_linux.go  traceroute_sack_nolinux.go
sack/portable_sack/: portable_sack.go
server/: README.md  example_main.go  main.go  server.go  server_test.go  utils.go  utils_test.go
tcp/: parser.go  parser_test.go  seqsocket_unix.go  seqsocket_windows.go  tcp_driver.go  tcp_driver_test.go  tcp_traceroute.go  tcp_traceroute_linux.go  tcpv4.go  tcpv4_test.go  tcpv4_unix.go  tcpv4_unix_test.go  tcpv4_windows.go  tcpv4_windows_test.go  utils_unix.go  utils_unix_test.go
tcp/portable_syn/: portable_syn.go
testutils/: netns.go  tcp.go  validate_traceroute_json.sh
traceroute/: cache.go  cache2.go  constants.go  errors.go  errors_test.go  params.go  runner.go  runner_test.go  traceroute.go  traceroute_test.go
udp/: udp_driver.go  udp_driver_test.go  udp_traceroute.go  udp_traceroute_linux.go  udpv4.go  udpv4_test.go  udpv4_unix.go  udpv4_windows.go
winconn/: mock_winconn_windows.go  winconn_nonraw_windows.go  winconn_windows.go  winconn_windows_test.go
(+30 files in other folders)
