[package]
name = "datadog-traceroute-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
datadog-traceroute-common = { path = "../common" }
datadog-traceroute-core = { path = "../traceroute" }
datadog-traceroute-packets = { path = "../packets" }
serde_json = "1.0.134"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
