[package]
name = "datadog-traceroute-packets"
version = "0.1.0"
edition = "2024"

[dependencies]
datadog-traceroute-common = { path = "../common" }
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Services",
  "Win32_System_Threading",
] }
