[package]
name = "datadog-traceroute-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
datadog-traceroute-common = { path = "../common" }
datadog-traceroute-core = { path = "../traceroute" }
datadog-traceroute-packets = { path = "../packets" }
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
