[package]
name = "traceroute-sack"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TCP SACK traceroute implementation"

[dependencies]
traceroute-core = { workspace = true }
traceroute-packets = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
pnet = { workspace = true }
pnet_packet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
