[package]
name = "traceroute-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP REST API server for datadog-traceroute"

[[bin]]
name = "datadog-traceroute-server"
path = "src/main.rs"

[dependencies]
traceroute-core = { workspace = true }
traceroute-packets = { workspace = true }
traceroute-udp = { workspace = true }
traceroute-tcp = { workspace = true }
traceroute-icmp = { workspace = true }
traceroute-sack = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
hickory-resolver = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
